Fix one assertEquals statement.